# dbt-lambda-starter

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  prep_dbt_layer.sh  pyproject.toml  response.json
.github/workflows/: terraform_deploy.yml
dbt/: README.md  handler.py  profiles.yml
dbt/models/example/: my_first_dbt_model.sql
infra/: dbt_runner.tf  outputs.tf  storage.tf  variables.tf
